# cnc-control

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CNC_NET.command  CNC_USB.command  LICENSE  README.md  README_EN.md  led_status.py  led_status_cli.py  mode_selector.py  net_mode.sh  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_integration.txt  status.sh  usb_mode.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
cnc_control/: __init__.py
cnc_control/selftest/: __init__.py  cli.py  core.py  journal.py  result.py  shadow_checks.py  utils.py
config/: cnc-control.env.example
config/ap/: dnsmasq.conf  (+1 more)
docs/: INSTALL.md  INSTALL_EN.md  SELFTEST_V2.md  SELFTEST_V2_EN.md  SHADOW_MODE.md
integration_tests/: README.md  README_EN.md  report.json  test_runner.py
shadow/: lock_manager.py  rebuild_engine.py  runtime_registry.py  shadow_manager.py  slot_manager.py  state_store.py  usb_manager.py  watcher_service.py
systemd/: cnc-ap.service  cnc-webui.service  cnc-wifi-fallback.service
tests/: test_env_guards.py  test_hostname_utils.py  test_selftest_journal.py  test_selftest_result.py  test_selftest_shadow.py  test_shadow_rebuild_engine.py  test_shadow_startup.py  test_webui_zerotier.py
tools/: bootstrap_cnc.sh  bootstrap_env.py  cnc_install_validation.sh  cnc_selftest.sh  setup_commands.sh  setup_led_service.sh  setup_nmtui.sh  setup_system.sh  setup_usb_service.sh  setup_webui.sh  setup_zerotier.sh  shadow_usb_export.sh  test_ap_cycle.sh  wifi_control.sh  wifi_fallback.sh
webui/: app.py  hostname_utils.py
(+1 files in other folders)
